fix: z-index of up-btn fixed

--- a/src/layout/footer/components/UpButtons/UpButtons.module.css
+++ b/src/layout/footer/components/UpButtons/UpButtons.module.css
@@ -41,7 +41,7 @@
 	place-content: center;
 	position: fixed;
 	right: 16px;
-	z-index: 99999;
+	z-index: 555;
 	background: rgb(55 65 81 / 0.8);
 	bottom: 0;
 	font-size: 13px !important;
